[package]
name = "backendery-lets-start-form"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
config = "0.14.0"
convert_case = "0.6.0"
dd-tracing-layer = "0.3.0"
lettre = { version = "0.11.7", features = ["builder", "tokio1-native-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
shuttle-axum = "0.46.0"
shuttle-runtime = { version = "0.46.0", default-features = false }
thiserror = "1.0.61"
tokio = { version = "1.28.2", features = ["macros"] }
tokio-retry = "0.3.0"
tower-http = { version = "0.5.2", features = ["cors", "propagate-header"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "json",
    "time",
] }
ulid = "1.1.3"
urlencoding = "2.1.3"
validator = { version = "0.18.1", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
